--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,8 @@
 package: github.com/teh-cmc/gools
 import:
+- package: github.com/fatih/camelcase
+- package: github.com/kelseyhightower/envconfig
+  version: ^1.3.0
 - package: github.com/segmentio/stats
   version: ^3.1.0
 - package: github.com/uber/jaeger-client-go
