--- a/glide.yaml
+++ b/glide.yaml
@@ -7,7 +7,7 @@ import:
   - ext
   - log
 - package: github.com/segmentio/stats
-  version: ^3.1.0
+  version: master
 - package: github.com/uber/jaeger-client-go
   version: ^2.8.0
 - package: go.uber.org/zap
