ci > updated travis-ci conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,14 @@ sudo: required
 
 language: go
 go:
-    - 1.8
-    - 1.8.3
-    - 1.9
+    - 1.8.4
+    - 1.9.1
 env:
     - "PATH=/home/travis/gopath/bin:$PATH"
 before_install:
     #- git config --global url."git@github.com:".insteadOf "https://github.com/"
-    - go get -u github.com/Masterminds/glide
+    - go get -u github.com/golang/dep/cmd/dep
 install:
-    - glide cc
-    - glide update -v --force
+    - dep ensure -v
 script:
-    - go test -race -cpu 1,2,4,8 -cover -run=. -bench=. ./counter ./env ./nanshal ./probe ./tagcleaner ./tracing ./zerocopy
+    - go test -race -cpu 1,4 -cover -run=. -bench=. ./counter ./env ./nanshal ./probe ./tagcleaner ./tracing ./zerocopy
