--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,28 +27,28 @@
 
 [[constraint]]
   name = "github.com/kelseyhightower/envconfig"
-  version = "~1.3.0"
+  version = "1.*"
 
 [[constraint]]
   name = "github.com/opentracing/opentracing-go"
-  version = "~1.0.2"
+  version = "1.*"
 
 [[constraint]]
   name = "github.com/segmentio/stats"
-  revision = "d5453edb8b8c439289c9dc721312766836a0909d"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
-  version = "~1.1.4"
+  version = "1.*"
 
 [[constraint]]
   name = "github.com/uber/jaeger-client-go"
-  version = "~2.9.0"
+  version = "2.*"
 
 [[constraint]]
   name = "go.uber.org/zap"
-  version = "~1.7.1"
+  version = "1.*"
 
 [[constraint]]
   name = "google.golang.org/grpc"
-  version = "~1.7.0"
+  version = "1.*"
